--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html>
+  <head>
+      <title>Module 2</title>
+      <meta charset = "UTF-8">
 
+      <link rel = "stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header id = "main-header">
+      <h1>Our Books</h1>
+    </header>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <section>
+          <h2 id = "jane-eyre">Jane Eyre</h2>
+          <p>Jane Eyre is a novel by English writer Charlotte Brontë,
+             published under the pen name "Currer Bell", on 16 October 1847,
+             by Smith, Elder & Co. of London.</p>
+    </section>
+  </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+      <section>
+          <h2 id = "wuthering-heights">Wuthering Heights</h2>
+          <p>Wuthering Heights is a novel by Emily Brontë published in 1847 under her pseudonym "Ellis Bell".
+             Brontë's only finished novel, it was written between October 1845 and June 1846</p>
+      </section>
+  </div>
+
+   <div class="col-lg-4 col-md-12 col-sm-12">
+      <section>
+          <h2 id = "dorian">The Picture of Dorian Gray</h2>
+          <p>The Picture of Dorian Gray is a Gothic and philosophical novel by Oscar Wilde,
+             first published complete in the July 1890 issue of Lippincott's Monthly Magazine.
+      </section>
+  </div>
+
+
+  </body>
+</html>
